# payment-service

./: .env.example  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
alembic/: env.py
alembic/versions/: 0001_create_payments_and_outbox.py  0002_add_payment_webhook_delivery_state.py  0003_add_payment_processing_leases.py  0004_add_gateway_operation_id.py
app/: consumer.py  main.py
app/api/v1/: payments.py  router.py
app/core/: config.py  security.py
app/messaging/: broker.py  handlers.py
app/models/: __init__.py  enums.py  outbox.py  payment.py
app/repositories/: outbox.py  payments.py
app/schemas/: payments.py
app/services/: gateway.py  outbox.py  payments.py  webhook.py
tests/: conftest.py  test_api_startup.py  test_consumer_idempotency.py  test_idempotency.py  test_outbox.py  test_payments_api.py  test_rabbitmq_integration.py  test_rabbitmq_topology.py  test_webhook.py
